--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "build": "vite build",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
-
   },
   "devDependencies": {
     "vite": "^5.4.10"
+  },
+  "dependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
